# monugstore

./: .gitignore  makefile  pyproject.toml  readme.md  setup.cfg
monugstore/: __init__.py  buckets.py  manager.py  oauth.py  pymongo.py
monugstore/scripts/: dump_json.py
monugstore/utils/: files.py  images.py  logging.py  size.py
scripts/: image_list.py
