[tool.poetry]
name = "monugstore"
version = "0.1.0"
description = "A quick python cookbook for dealing with google-cloud-storage"
authors = ["Pedro Cavalcanti"]
license = "MIT"
readme = "README.md"

# Add this section to include the scripts folder
include = [
    "scripts/*"
]

exclude = [
    "local_scripts/*"
]

[tool.poetry.scripts]    
mgs-dump-key = "monugstore.scripts.dump_json:main"

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^2.18.2"
google-cloud-secret-manager = "^2.20.2"
python-dotenv = "^1.0.1"
rich = "^13.9.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
